fixing spacing issues in blog posts

--- a/css/main.css
+++ b/css/main.css
@@ -439,7 +439,7 @@ footer.footer-main .words{
   }
   .tt {
     font-size: 15px;
-    padding-top: 40px;
+    padding-top: 35px;
     line-height: 25px;
   }
   /* .selected-work thumbnails increased to 50% width from 33.333% */
@@ -472,17 +472,25 @@ footer.footer-main .words{
   .blog-posts header a {
     font-size: 15px;
   }
-  .blog-posts ul li {
-    margin-bottom: 13px;
-    overflow: hidden;
+  header.post-list {
+    margin-top: 10px;
   }
-
+  .blog-posts ul li .inner {
+    position: relative;
+    padding: 15px 20px 15px 0px;
+  }
   .blog-posts ul li .post-timestamp {
     font-size: 12px;
     display: inline-block;
     position: absolute;
-    left: 20px;
-    top: 20px;
+    left: 0px;
+    top: 15px;
+  }
+  .blog-posts ul li {
+    left: 0px;
+  }
+  .blog-posts ul {
+    margin-top: 40px;
   }
   .blog-posts ul li .post-title {
     font-size: 15px;
@@ -493,11 +501,13 @@ footer.footer-main .words{
 
   .post header {
     margin-bottom: 40px;
+    margin-top: 16px;
   }
 
   .post header .post-title {
     font-weight: 400;
     color: black;
+    margin-top: 50px;
     font-size: 25px;
     line-height: 33px;
     margin-bottom: 10px;
@@ -514,10 +524,6 @@ footer.footer-main .words{
   .post-content p {
     font-size: 15px;
     line-height: 25px;
-  }
-
-  .post footer {
-    margin-bottom: 40px;
   }
 
   .post footer a {
